preliminary update of content and changed colour scheme

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@ title: Home
 <section class="hero">
     <div class="container">
         <div class="hero-content">
-            <h1>Hi, I'm Michael McPhail</h1>
-            <p class="lead">Welcome to my personal website where I share my thoughts, showcase my work, and document my projects.</p>
+            <h1>Dr Michael McPhail</h1>
+            <p class="lead">I'm a maths enthusiast, I love working on challenging problems, and I want to see my work have positive impact.</p>
         </div>
     </div>
 </section>
@@ -17,14 +17,14 @@ title: Home
         <div class="bio-content">
             <div class="bio-text">
                 <h2>About Me</h2>
-                <p>I'm a passionate professional with expertise in [your areas of expertise]. I love creating meaningful solutions and sharing knowledge through writing and interactive projects.</p>
-                <p>When I'm not working on projects, you can find me [your interests/hobbies].</p>
+                <p>I am a mathematician, currently working as a Senior Research Officer at the Malaria Atlas Project (MAP) in Perth Western Australia. 
+                    Prior to this I was a Postdoctoral Research Associate at the University of Oxford working on mathematical models of ice-sheet dynamics. 
+                    I also completed my DPhil (PhD) in Industrially Focussed Mathematical Modelling at the University of Oxford. 
+                    Before moving to the UK I completed my undergraduate degree in Mathematics and Physics (honours) as part of the Advanced Science program at the University of Western Australia.</p>
+                <p>I built this website to share my work and some of my interests. This is still in development and I'm still moving information from my old website to this one. If you wish to get in touch, please email me at <span>michael.mcphail</span><span style="display:none;">remove-this</span><span>@thekids.org.au</span>.</p>
             </div>
             <div class="bio-visual">
-                <!-- Placeholder for your photo or visual -->
-                <div class="placeholder-image">
-                    <p>Your photo or visual here</p>
-                </div>
+                <img src="{{ site.baseurl }}/assets/images/profile/Profile_image.jpg" alt="Michael McPhail" class="bio-image" style="max-width: 300px; height: auto;">
             </div>
         </div>
     </div>
@@ -36,18 +36,18 @@ title: Home
         <div class="featured-grid">
             <div class="featured-item">
                 <h3>Latest Blog Post</h3>
-                <p>Check out my most recent thoughts and insights.</p>
+                <p>Most recent blog post.</p>
                 <a href="{{ '/blog/' | relative_url }}" class="btn">Read More</a>
             </div>
             <div class="featured-item">
                 <h3>Recent Project</h3>
-                <p>Explore my latest portfolio project.</p>
+                <p>Portfolio projects.</p>
                 <a href="{{ '/projects/' | relative_url }}" class="btn">View Projects</a>
             </div>
             <div class="featured-item">
-                <h3>Work Experience</h3>
+                <h3>Background</h3>
                 <p>Learn about my professional background.</p>
-                <a href="{{ '/work/' | relative_url }}" class="btn">See Work</a>
+                <a href="{{ '/background/' | relative_url }}" class="btn">See Background</a>
             </div>
         </div>
     </div>
