modified header style and tweaked project header text

--- a/projects/index.html
+++ b/projects/index.html
@@ -6,7 +6,7 @@ title: Projects
 <section class="projects-header">
     <div class="container">
         <h1>Projects</h1>
-        <p>A collection of my portfolio projects, including interactive dashboards and visualizations.</p>
+        <p>A brief look at some of the work I've been involved with</p>
     </div>
 </section>
 
