--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Home
     <div class="container">
         <div class="hero-content">
             <h1>Dr Michael McPhail</h1>
-            <p class="lead">I'm a maths enthusiast, I love working on challenging problems, and I want to see my work have positive impact.</p>
+            <p class="lead">I love working on challenging problems, and I want to see my work have positive impact.</p>
         </div>
     </div>
 </section>
@@ -17,11 +17,11 @@ title: Home
         <div class="bio-content">
             <div class="bio-text">
                 <h2>About Me</h2>
-                <p>I am a mathematician, currently working as a Senior Research Officer at the Malaria Atlas Project (MAP) in Perth Western Australia. 
-                    Prior to this I was a Postdoctoral Research Associate at the University of Oxford working on mathematical models of ice-sheet dynamics. 
-                    I also completed my DPhil (PhD) in Industrially Focussed Mathematical Modelling at the University of Oxford. 
-                    Before moving to the UK I completed my undergraduate degree in Mathematics and Physics (honours) as part of the Advanced Science program at the University of Western Australia.</p>
-                <p>I built this website to share my work and some of my interests. This is still in development and I'm still moving information from my old website to this one. If you wish to get in touch, please email me at <span>michael.mcphail</span><span style="display:none;">remove-this</span><span>@thekids.org.au</span>.</p>
+                <p>I want this website to highlight the wide range of problems I've worked on, or am currently working on. The general thread linking these problems is that they possess three characteristics I find deeply motivating.
+                   (1) they are all real-world problems with measurable, real-world impact; (2) they can all be tackled using analytic methods (including maths, stats, computational methods etc.); and (3) they are all challenging. If such problems interest you, please explore my website.</p> 
+                 <p> For more about me, see my <a href="{{site.baseurl}}/background/index.html">Background</a> page. In brief, I'm currently working at the Malaria Atlas Project (MAP) in Perth, Western Australia, using geospatial analysis and statistical methods to support decision making for malaria elimination. 
+                    Prior to this I spent six years at the Mathematical Institute at the University of Oxford to first complete my DPhil (PhD) in Industrial Applied mathematics and then as a Postdoctoral Research Associate in mathematical geoscience.</p>
+                <p>This is still in development and I'm still moving information from my old website to this one. If you wish to get in touch, please email me at <span>michael.mcphail</span><span style="display:none;">remove-this</span><span>@thekids.org.au</span>.</p>
             </div>
             <div class="bio-visual">
                 <img src="{{ site.baseurl }}/assets/images/profile/Profile_image_restaurant.jpg" alt="Michael McPhail" class="bio-image" style="max-width: 300px; height: auto;">
